# javosh

./: .gitattributes  .gitignore  README.md  composer.json  index.html  run_up_server_guide
app/Console/: Kernel.php
app/Helpers/: Common.php  Tokenizer.php
app/Http/: Kernel.php
app/Libraries/: AspectLib.php  CommentLib.php  ProductLib.php  ResultLib.php  SentenceLib.php  SummaryLib.php  WordLib.php
app/Models/: Aspect.php  Category.php  Comment.php  FileLog.php  Product.php  Rating.php  Result.php  Sentence.php  Summary.php  Type.php  User.php  Word.php
app/Providers/: AppServiceProvider.php
computation/: CMakeLists.txt  amin  instruction.txt  main  main.cpp  mysqlconnect  sentence_ordering.cpp  stemmer.cpp
computation/Models/: Word.cpp  Word.h
config/: app.php  database.php  mail.php
data/aspects/: frequent_item_sets.csv
data/products/: uncrawled-products.csv
data/results/: CB.csv  Random.csv  SCB.csv
data/words/: adjectives.csv  negative-attributes.csv  other-attributes.csv  positive-attributes.csv  potential_verbs.csv  stop_words.csv  verbs.csv
database/migrations/: 2014_07_02_230147_migration_cartalyst_sentinel.php  2016_11_08_085649_create_categories_table.php  2016_11_08_085650_create_products_table.php  2016_11_08_093449_create_comments_table.php  2016_11_08_093628_create_types_table.php  2016_11_08_093647_create_aspects_table.php  2016_11_08_094039_create_words_table.php  2016_11_18_070237_create_file_logs_table.php  2016_11_20_093514_create_ratings_table.php  (+23 more)
routes/: breadcrumbs.php  web.php
tests/: acceptance.suite.yml
(+1124 files in other folders)
